extends Control

var ruins
var original_tower
var fire_tower
var ice_tower

func open():
	show()

func _on_repair_button_pressed():
	pass # replace with function body

func _on_fire_button_pressed():
	pass # replace with function body

func _on_ice_button_pressed():
	pass # replace with function body